<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextColor="@color/black"
        app:tabGravity="fill"
        app:tabMode="scrollable" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager_content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.viewpager.widget.ViewPager>
</LinearLayout>

