...
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:background="@color/transparent"
    tools:context=".main.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent" />

    <ImageView
        android:id="@+id/imageView_no_internet"
...
